Fixed navbar logo text on mobile

--- a/templates/generic_navbar_template-nextjs-prisma-clerk/styles/layout/Navbar.module.scss
+++ b/templates/generic_navbar_template-nextjs-prisma-clerk/styles/layout/Navbar.module.scss
@@ -42,15 +42,20 @@
                 margin: 10px;
                 color: $light;
             }
-            
-            .logo_text {
-                line-height: 80px !important;
-                font-size: 36px;
-                font-weight: 1000;
-                color: $light;
-            }
     
 @media (max-width: 800px) { // mobile
+    .logo_text {
+        line-height: 30px !important;
+        font-size: 5vw;
+        max-width: 200px;
+        font-weight: 1000;
+        color: $light;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        word-wrap: break-word;
+    }
+
     // Menu Hamburger Button
     .hamburger_button { 
         position: absolute; 
@@ -132,6 +137,13 @@
     }
 }
 @media (min-width: 799px) { // browser
+    .logo_text {
+        line-height: 80px !important;
+        font-size: 36px;
+        font-weight: 1000;
+        color: $light;
+    }
+
     // Menu Hamburger Button
     .hamburger_button { 
         position: absolute; 
